fix: clear button back working and loading symbol is visible

--- a/VerbApp/src/app/components/result/result.component.scss
+++ b/VerbApp/src/app/components/result/result.component.scss
@@ -10,3 +10,7 @@
     vertical-align: middle;
     padding: 8px;
   }
+
+span{
+  color: white;
+  }
