--- a/VerbApp/src/app/pages/conjugator/conjugator.page.scss
+++ b/VerbApp/src/app/pages/conjugator/conjugator.page.scss
@@ -4,7 +4,7 @@
 }
 
 .result {
-  color: white;
+  // color: white;
   font: bold Century Gothic, Arial;
   text-shadow: 0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black,0 0 2px black;
   letter-spacing: 2px;
